Branch Desarrollo 3er proyecto

--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
                                     <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Alimentacion</a>
+                                    <a class="nav-link" href="./html/alimentacion.html">Alimentacion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Estimulacion</a>
+                                    <a class="nav-link" href="./html/estimulacion.html">Estimulacion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Cuidados</a>
+                                    <a class="nav-link" href="./html/cuidados.html">Cuidados</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Contacto</a>
+                                    <a class="nav-link" href="./html/contacto.html">Contacto</a>
                                 </li>
                             </ul>
                             <form class="d-flex" role="search">
                                 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" />
-                                <button class="btn btn-success" type="submit">
+                                <button class="btn" type="submit">
                                     Buscar
                                 </button>
                             </form>
@@ -183,7 +183,7 @@
                     <p class="card-text">Informate sobre la alimentacion sana y equilibrada, para tener una mascota
                         fuerte y
                         saludable.</p>
-                    <a href="#" class="btn btn-success">Ir al enlace</a>
+                    <a href="./html/alimentacion.html" class="btn">Ir al enlace</a>
                 </div>
             </div>
         </div>
@@ -195,7 +195,7 @@
                     <p class="card-text">Enterate de como divertir y estimular a estas aves para que se conviertan en la
                         atracción
                         de la casa.</p>
-                    <a href="#" class="btn btn-success">Ir al enlace</a>
+                    <a href="./html/estimulacion.html" class="btn">Ir al enlace</a>
                 </div>
             </div>
         </div>
@@ -207,7 +207,7 @@
                     <p class="card-text">¿Que cuidados hay que tener? ¿Cuando es conveniente visitar al veterinario?
                         Informate
                         acá.</p>
-                    <a href="#" class="btn btn-success">Ir al enlace</a>
+                    <a href="./html/cuidados.html" class="btn">Ir al enlace</a>
                 </div>
             </div>
         </div>
@@ -237,7 +237,7 @@
                             </div>
                         </div>
                         <div class="col-auto">
-                            <button type="submit" class="btn btn-success mb-4">
+                            <button type="submit" class="btn mb-4">
                                 Suscribirse
                             </button>
                         </div>
@@ -255,16 +255,16 @@
                                 <a href="index.html" class="text-dark">Inicio</a>
                             </li>
                             <li>
-                                <a href="#!" class="text-dark">Alimentacion</a>
+                                <a href="./html/alimentacion.html" class="text-dark">Alimentacion</a>
                             </li>
                             <li>
-                                <a href="#!" class="text-dark">Estimulacion</a>
+                                <a href="./html/estimulacion.html" class="text-dark">Estimulacion</a>
                             </li>
                             <li>
-                                <a href="#!" class="text-dark">Cuidados</a>
+                                <a href="./html/cuidados.html" class="text-dark">Cuidados</a>
                             </li>
                             <li>
-                                <a href="#!" class="text-dark">Contacto</a>
+                                <a href="./html/contacto.html" class="text-dark">Contacto</a>
                             </li>
                         </ul>
                     </div>
