Branch Desarrollo 3er proyecto

--- a/html/alimentacion.html
+++ b/html/alimentacion.html
@@ -38,7 +38,7 @@
                                     <a class="nav-link active" href="./alimentacion.html">Alimentacion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Estimulacion</a>
+                                    <a class="nav-link" href="./estimulacion.html">Estimulacion</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./cuidados.html">Cuidados</a>
@@ -198,7 +198,7 @@
                                 <a href="./alimentacion.html" class="text-dark">Alimentacion</a>
                             </li>
                             <li>
-                                <a href="#!" class="text-dark">Estimulacion</a>
+                                <a href="./estimulacion.html" class="text-dark">Estimulacion</a>
                             </li>
                             <li>
                                 <a href="./cuidados.html" class="text-dark">Cuidados</a>
