Branch Desarrollo 3er proyecto-3

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -38,7 +38,7 @@
                                     <a class="nav-link" href="./alimentacion.html">Alimentacion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Estimulacion</a>
+                                    <a class="nav-link" href="./estimulacion.html">Estimulacion</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./cuidados.html">Cuidados</a>
@@ -67,10 +67,10 @@
                     <h1 class="main_title">Mundo Ninfa</h1>
                 </div>
             <div class="container">
-                <div class=" text-center mt-5">
+                <div class=" text-center mt-5" data-aos="fade-up">
                     <h2>Contacto</h2>
                 </div>
-            <div class="row ">
+            <div class="row" data-aos="fade-up">
                 <div class="col-lg-7 mx-auto mt-5 mb-5">
                     <div class="card_data mt-2 mx-auto p-4">
                         <div class="card-body">
@@ -129,7 +129,7 @@
                                                         data-error="Por favor, escriba su mensaje."></textarea>
                                                 </div>
                                             </div>
-                                            <div class="btn col-md-12">
+                                            <div class="col-md-12">
                                                 <input type="submit" class="btn btn-success" value="Enviar">
                                             </div>
                                         </div>
@@ -187,7 +187,7 @@
                                 <a href="./alimentacion.html" class="text-dark">Alimentacion</a>
                             </li>
                             <li>
-                                <a href="#!" class="text-dark">Estimulacion</a>
+                                <a href="./estimulacion.html" class="text-dark">Estimulacion</a>
                             </li>
                             <li>
                                 <a href="./cuidados.html" class="text-dark">Cuidados</a>
