--- a/html/cuidados.html
+++ b/html/cuidados.html
@@ -36,10 +36,10 @@
                                     <a class="nav-link" href="./alimentacion.html">Alimentacion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Estimulacion</a>
+                                    <a class="nav-link" href="./estimulacion.html">Estimulacion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">Cuidados</a>
+                                    <a class="nav-link active" href="./cuidados.html">Cuidados</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -228,10 +228,10 @@
                                 <a href="./alimentacion.html" class="text-dark">Alimentacion</a>
                             </li>
                             <li>
-                                <a href="#!" class="text-dark">Estimulacion</a>
+                                <a href="./estimulacion.html" class="text-dark">Estimulacion</a>
                             </li>
                             <li>
-                                <a href="#!" class="text-dark">Cuidados</a>
+                                <a href="./cuidados.html" class="text-dark">Cuidados</a>
                             </li>
                             <li>
                                 <a href="./contacto.html" class="text-dark">Contacto</a>
