--- a/html/estimulacion.html
+++ b/html/estimulacion.html
@@ -67,11 +67,11 @@
                     <h1 class="main_title">Mundo Ninfa</h1>
                 </div>
             <div class="container">
-                <div class=" text-center mt-5">
+                <div class=" text-center mt-5" data-aos="fade-up">
                     <h2>Estimulación</h2>
                 </div>
             <section>
-                <div class="card_data mt-5">
+                <div class="card_data mt-5" data-aos="fade-up">
                     <p> Debes interactuar con tu ninfa, por más
                         cansado que estés. Posiblemente un/a compañero/a de su especie, reducirá las horas que
                         debes interactuar con tu ave, pero igualmente buscará estimulación humana, en especial
@@ -80,14 +80,14 @@
                         Sé constante y paciente.
                         </p>
                 </div>
-                <div class="section_data mt-5">
+                <div class="section_data mt-5" data-aos="fade-up">
                     <h4>Enriquecimiento ambiental</h4>
                     <p>La ambientación es de suma importancia para la salud mental y física de nuestras aves,
                         ellas en la naturaleza no solo comen, beben y descansan, también pasan gran parte de su
                         tiempo recreándose y formando lazos con otros miembros de su especie. Deben tener una
                         cantidad de elementos distractivos, recreativos y estimulantes.</p>
                     <h5>Perchas</h5>
-                    <img class="img_section" src="../img/percha.jpg" alt="percha">
+                    <img class="img_section img-fluid" src="../img/percha.jpg" alt="percha">
                     <ul>
                         <li><strong>Cemento/piedra</strong>: estas ayudan a desgastar de forma natural las uñas de
                             nuestras aves (el tamaño XS
@@ -117,7 +117,7 @@
                             <strong>Considera entrenarla con un clicker.</strong> Conforme el entrenamiento se vuelva más difícil, es probable que tu ave tenga dificultades para determinar la razón por la que le das una golosina. Usa un “clicker” o haz un sonido breve distintivo (golpeando un bolígrafo) siempre que el ave muestre un buen comportamiento. Esto captará la atención del ave mientras le traes una golosina. Cuando el ave esté bien entrenada, podrás premiarla empleando únicamente el sonido del clicker o del bolígrafo; mientras tanto, la golosina seguirá siendo una parte esencial del entrenamiento.
                             <ul><li>Se recomienda emplear un clicker o algún otro sonido distintivo, en lugar de una orden verbal, ya que sonará del mismo modo todo el tiempo y es poco probable que el ave lo oiga fuera del entrenamiento.</li></ul>
                         </li>
-                        <img class="img_section" src="../img/clicker.jpg" alt="clicker">
+                        <img class="img_section img-fluid" src="../img/clicker.jpg" alt="clicker">
                         <li>
                             <strong>Si deseas enseñarle otros trucos, sigue empleando el entrenamiento con clicker.</strong> Este entrenamiento es un instrumento excelente para el adiestramiento de mascotas. Siempre que empieces a enseñarle una nueva orden a tu cacatúa, emplea un clicker o haz un ruido distintivo golpeando un bolígrafo justo cuando muestre un buen comportamiento. Tráele una golosina inmediatamente después, y sigue entrenándola todos los días hasta que responda a la orden recibiendo el sonido del clicker como único premio.</li>
                         <li><strong>Enséñale a la cacatúa a hablar.</strong> Cuando la cacatúa se sienta relajada y feliz, repite una frase unas cuantas veces empleando una expresión facial y un tono animados. La cacatúa podría sentir interés por esa palabra si te mira y muestra una reacción, como inclinar la cabeza o dilatar sus pupilas. Pronuncia la palabra con frecuencia, pero detente si la cacatúa se aburre. Prémiala con una golosina si intenta imitarte.</li>
