Branch Desarrollo 3er proyecto-4

--- a/html/cuidados.html
+++ b/html/cuidados.html
@@ -33,10 +33,10 @@
                                     <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./alimentacion.html">Alimentacion</a>
+                                    <a class="nav-link" href="./alimentacion.html">Alimentación</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./estimulacion.html">Estimulacion</a>
+                                    <a class="nav-link" href="./estimulacion.html">Estimulación</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" href="./cuidados.html">Cuidados</a>
@@ -225,10 +225,10 @@
                                 <a href="../index.html" class="text-dark">Inicio</a>
                             </li>
                             <li>
-                                <a href="./alimentacion.html" class="text-dark">Alimentacion</a>
+                                <a href="./alimentacion.html" class="text-dark">Alimentación</a>
                             </li>
                             <li>
-                                <a href="./estimulacion.html" class="text-dark">Estimulacion</a>
+                                <a href="./estimulacion.html" class="text-dark">Estimulación</a>
                             </li>
                             <li>
                                 <a href="./cuidados.html" class="text-dark">Cuidados</a>
