--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                                     <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./html/alimentacion.html">Alimentacion</a>
+                                    <a class="nav-link" href="./html/alimentacion.html">Alimentación</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./html/estimulacion.html">Estimulacion</a>
+                                    <a class="nav-link" href="./html/estimulacion.html">Estimulación</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./html/cuidados.html">Cuidados</a>
@@ -76,12 +76,12 @@
             <section>
                 <div class="card_main row align-content-center mt-5" data-aos="fade-up">
                     <div class="col-12 col-md-6 my-auto">
-                        <h2>Bienvenido a la pagina de las cocotillas</h2>
+                        <h2>Bienvenido a la página de las cocotillas</h2>
                         <p>
-                            Este sitio esta construido para brindar informacion sobre estas
-                            bellas y graciosas aves. Aprenderá sobre su cuidado, alimentacion y
-                            comportamiento. De nuestra mano, convertira en su cocotilla en un
-                            fiel compañero y una amorosa mascota!
+                            Este sitio está construido para brindar información sobre estas
+                            bellas y graciosas aves. Aprenderá sobre su cuidado, alimentación y
+                            comportamiento. De nuestra mano, convertirá en su cocotilla en un
+                            fiel compañero y una amorosa mascota.
                         </p>
                     </div>
                     <div class="col-12 col-md-6">
@@ -94,7 +94,7 @@
         <section>
                 <div class="container mt-5">
                     <div class="card_data row" data-aos="fade-up">
-                        <h4>Informacion General</h4>
+                        <h4>Información General</h4>
                         <div class="col-12 col-md-4">
                             <img src="./img/ninfa_info.jpg" alt="" class="img-fluid">
                         </div>
@@ -133,7 +133,7 @@
     <!-- INICIO CARROUSEL -->
 
     <div class="container">
-        <h4 class="text-center mt-5">Galeria</h4>
+        <h4 class="text-center mt-5">Galería</h4>
         <div id="carouselExampleIndicators" class="carousel slide w-50 mx-auto mt-5" data-bs-ride="true"
             data-aos="zoom-out-up">
             <div class="carousel-indicators">
@@ -179,8 +179,8 @@
             <div class="card" data-aos="zoom-in">
                 <img src="./img/comida.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Alimentacion</h5>
-                    <p class="card-text">Informate sobre la alimentacion sana y equilibrada, para tener una mascota
+                    <h5 class="card-title">Alimentación</h5>
+                    <p class="card-text">Informate sobre la alimentación sana y equilibrada, para tener una mascota
                         fuerte y
                         saludable.</p>
                     <a href="./html/alimentacion.html" class="btn">Ir al enlace</a>
@@ -191,7 +191,7 @@
             <div class="card" data-aos="zoom-in">
                 <img src="./img/estimulo.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Estimulacion</h5>
+                    <h5 class="card-title">Estimulación</h5>
                     <p class="card-text">Enterate de como divertir y estimular a estas aves para que se conviertan en la
                         atracción
                         de la casa.</p>
@@ -204,7 +204,7 @@
                 <img src="./img/cuidados.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Cuidados</h5>
-                    <p class="card-text">¿Que cuidados hay que tener? ¿Cuando es conveniente visitar al veterinario?
+                    <p class="card-text">¿Qué cuidados hay que tener? ¿Cuando es conveniente visitar al veterinario?
                         Informate
                         acá.</p>
                     <a href="./html/cuidados.html" class="btn">Ir al enlace</a>
@@ -255,10 +255,10 @@
                                 <a href="index.html" class="text-dark">Inicio</a>
                             </li>
                             <li>
-                                <a href="./html/alimentacion.html" class="text-dark">Alimentacion</a>
+                                <a href="./html/alimentacion.html" class="text-dark">Alimentación</a>
                             </li>
                             <li>
-                                <a href="./html/estimulacion.html" class="text-dark">Estimulacion</a>
+                                <a href="./html/estimulacion.html" class="text-dark">Estimulación</a>
                             </li>
                             <li>
                                 <a href="./html/cuidados.html" class="text-dark">Cuidados</a>
