--- a/html/contacto.html
+++ b/html/contacto.html
@@ -35,10 +35,10 @@
                                     <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./alimentacion.html">Alimentacion</a>
+                                    <a class="nav-link" href="./alimentacion.html">Alimentación</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./estimulacion.html">Estimulacion</a>
+                                    <a class="nav-link" href="./estimulacion.html">Estimulación</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./cuidados.html">Cuidados</a>
@@ -184,10 +184,10 @@
                                 <a href="../index.html" class="text-dark">Inicio</a>
                             </li>
                             <li>
-                                <a href="./alimentacion.html" class="text-dark">Alimentacion</a>
+                                <a href="./alimentacion.html" class="text-dark">Alimentación</a>
                             </li>
                             <li>
-                                <a href="./estimulacion.html" class="text-dark">Estimulacion</a>
+                                <a href="./estimulacion.html" class="text-dark">Estimulación</a>
                             </li>
                             <li>
                                 <a href="./cuidados.html" class="text-dark">Cuidados</a>
