--- a/html/estimulacion.html
+++ b/html/estimulacion.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="En Mundo Ninfa te brindamos la más completa información para que le des el mejor de los cuidados a tu mascota.">
+        content="Sección dedicada a la estimulación de nuestras cocotillas.">
     <meta name="keywords"
-        content="ninfa, cocotilla, cockatiel, ave, salud, cuidados, alimentación, juegos, entrenamiento, loro, aprendizaje, veterinario, pájaro">
+        content="ninfa, cocotilla, cockatiel, ave, salud, cuidados, juegos, entrenamiento, loro, aprendizaje, pájaro">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Mundo Ninfa - Cuidados</title>
+    <title>Mundo Ninfa - Estimulación</title>
 </head>
 
 <body>
@@ -35,10 +35,10 @@
                                     <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./alimentacion.html">Alimentacion</a>
+                                    <a class="nav-link" href="./alimentacion.html">Alimentación</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="./estimulacion.html">Estimulacion</a>
+                                    <a class="nav-link active" href="./estimulacion.html">Estimulación</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./cuidados.html">Cuidados</a>
@@ -176,10 +176,10 @@
                                 <a href="../index.html" class="text-dark">Inicio</a>
                             </li>
                             <li>
-                                <a href="./alimentacion.html" class="text-dark">Alimentacion</a>
+                                <a href="./alimentacion.html" class="text-dark">Alimentación</a>
                             </li>
                             <li>
-                                <a href="./estimulacion.html" class="text-dark">Estimulacion</a>
+                                <a href="./estimulacion.html" class="text-dark">Estimulación</a>
                             </li>
                             <li>
                                 <a href="./cuidados.html" class="text-dark">Cuidados</a>
