Branch Desarrollo Proyecto Final

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <meta name="keywords" content="ninfa, cocotilla, cockatiel, ave, salud, cuidados, alimentación, juegos, entrenamiento, loro, aprendizaje, veterinario, pájaro">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js">
+    <link rel="stylesheet" href="./css/style.css" />    
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/coco_icon.jpg">
     <title>Mundo Ninfa - Todo el contenido para vos y tu ave.</title>
 </head>
 
@@ -177,6 +179,7 @@
         <h4>Enlaces relacionados</h4>
         <div class="col-11 col-md-3 mt-3 mt-md-0">
             <div class="card" data-aos="zoom-in">
+                <div class="backgroundEffect"></div>
                 <img src="./img/comida.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Alimentación</h5>
