--- a/html/estimulacion.html
+++ b/html/estimulacion.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/coco_icon.jpg">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Mundo Ninfa - Estimulación</title>
 </head>
@@ -195,7 +196,7 @@
 
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
             © 2022 Copyright:
-            <a class="text-dark" href="index.html">mundoninfa.com</a>
+            <a class="text-dark" href="../index.html">mundoninfa.com</a>
         </div>
     </footer>
 
