Branch Desarrollo Proyecto Final

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -8,11 +8,11 @@
     <meta name="description"
         content="Ponete en contacto con Mundo Ninfa. Contanos tu duda o consulta y en la brevedad te responderemos.">
     <meta name="keywords"
-        content="ninfa, cocotilla, cockatiel, ave, contacto, loro, mensaje, email, newsletter, consulta, veterinario, pájaro">
+        content="ninfa, cocotilla, cockatiel, ave, contacto, loro, mensaje, email, newsletter, consulta, duda, sugerencia, colaborar, aportar, saludar, veterinario, pájaro">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/coco_icon.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/coco_icon.jpg">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Mundo Ninfa - Contacto</title>
 </head>
