--- a/html/alimentacion.html
+++ b/html/alimentacion.html
@@ -8,11 +8,11 @@
     <meta name="description"
         content="Sección dedicada a la alimentación de las ninfas.">
     <meta name="keywords"
-        content="ninfa, cocotilla, cockatiel, ave, salud, verduras, frutas, premios, cuidados, alimentación, loro, veterinario, pájaro">
+        content="ninfa, cocotilla, cockatiel, ave, salud, verduras, frutas, premios, comida, semillas, mijo, pienso, vitamina, cuidados, alimentación, loro, veterinario, pájaro">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/coco_icon.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/coco_icon.jpg">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Mundo Ninfa - Alimentación</title>
 </head>
