--- a/html/cuidados.html
+++ b/html/cuidados.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Sección de Mundo Ninfa dedicada a la salud.">
-    <meta name="keywords" content="ninfa, cocotilla, cockatiel, ave, salud, cuidados, bienestar  , loro, veterinario, pájaro">
+    <meta name="keywords" content="ninfa, cocotilla, cockatiel, ave, salud, cuidados, bienestar, enfermedad, resfrio, estornudos, calcio, enfermo, loro, veterinario, pájaro">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/coco_icon.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/coco_icon.jpg">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Mundo Ninfa - Cuidados</title>
 </head>
