--- a/html/estimulacion.html
+++ b/html/estimulacion.html
@@ -8,11 +8,11 @@
     <meta name="description"
         content="Sección dedicada a la estimulación de nuestras cocotillas.">
     <meta name="keywords"
-        content="ninfa, cocotilla, cockatiel, ave, salud, cuidados, juegos, entrenamiento, loro, aprendizaje, pájaro">
+        content="ninfa, cocotilla, cockatiel, ave, salud, cuidados, juegos, entrenamiento, comportamiento, entretenimiento, enriquecimiento, ambiental, loro, aprendizaje, pájaro">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/coco_icon.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/coco_icon.jpg">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Mundo Ninfa - Estimulación</title>
 </head>
